fix deprecated newInstance